<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:font="http://schemas.android.com/apk/assets/font"
    font:typeface="ROBOTO-REGULAR.TTF"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/color_back"
    android:weightSum="1">

    <!-- Image -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            card_view:cardElevation="5dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/color_ettext"
            card_view:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/image_cook"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <!-- первая таблица -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_nameOfDish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="35dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_nameofdish"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:layout_weight="9"
                android:textColorHint="@color/color_text_hint">

                <EditText
                    android:id="@+id/etNameofdish"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_ettext"
                    android:hint="@string/hint_NameOfDIsh"
                    android:inputType="textPersonName"
                    android:textColor="@color/color_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_category"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textColorHint="@color/color_text_hint">

                <EditText
                    android:id="@+id/etCategory"
                    android:hint="@string/hint_Category"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_ettext"
                    android:inputType="textPersonName"
                    android:textColor="@color/color_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    <!-- вторая таблица -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_ingredients"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textColorHint="@color/color_text_hint">

                <EditText
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/etIngredients1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_Ingredients"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_ettext"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:textColor="@color/color_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- 1 таблица -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_cooktime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_clock"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textColorHint="@color/color_text_hint">

                <EditText
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/etCookingTime"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_CookingTime"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_ettext"
                    android:inputType="textPersonName"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- 3 таблица -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_recipe"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textColorHint="@color/color_text_hint">

                <EditText
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:id="@+id/text_of_recipe"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_TextOfRecipe"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_ettext"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/color_text"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/imageView2"
                android:layout_alignParentTop="true"
                android:background="@color/color_button" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_add"
                android:background="#00ffffff"
                android:layout_marginStart="37dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDelete"
                android:drawableEnd="@drawable/ic_clear"
                android:background="#00ffffff"
                android:layout_marginEnd="37dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

    </TableLayout>
</ScrollView>